Upgrading the typescript service generator